oracle/huginn/mysqldata-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f ./docker-compose.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqldata
  name: mysqldata
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysqldata
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f ./docker-compose.yml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/huginn-default: "true"
        io.kompose.service: mysqldata
    spec:
      containers:
        - args:
            - /bin/true
          image: mysql:5.7
          name: mysqldata
          resources: {}
      restartPolicy: Always
status: {}
