oracle/huginn/threaded-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f ./docker-compose.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: threaded
  name: threaded
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: threaded
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f ./docker-compose.yml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/huginn-default: "true"
        io.kompose.service: threaded
    spec:
      containers:
        - args:
            - /scripts/init
            - bin/threaded.rb
          image: ghcr.io/huginn/huginn-single-process
          name: threaded
          resources: {}
      restartPolicy: Always
status: {}
