oracle/huginn/huginn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: huginn
  namespace: huginn

spec:
  rules:
    - host: huginn.haijin666.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  huginn
                port:
                  number: 9696
